[project]
name = "ComfyUI-Foundation1"
description = "Custom nodes for the Foundation-1 audio model in ComfyUI, providing BPM-aware generation and streamlined audio workflows."
version = "0.1.0"
license = "MIT"
dynamic = ["dependencies"]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.dynamic]

[project.urls]
Repository = "https://github.com/Aero-Ex/ComfyUI-Foundation1"

[tool.comfy]
PublisherId = "aerox"
DisplayName = "Foundation1"
Icon = ""
